# DSA

Sort/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  main.cpp
Sort/build-Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
Sort/build-Ninja/: CMakeCache.txt
Sort/build-Visual-Studio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Sort.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sort.vcxproj  sort.vcxproj.filters
Sort/build-Visual-Studio/sort.dir/Debug/: sort.exe.recipe  sort.ilk
Sort/build-Visual-Studio/sort.dir/Debug/sort.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sort/build-Visual-Studio/sort.dir/Release/: sort.exe.recipe
Sort/build-Visual-Studio/sort.dir/Release/sort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sort/include/: bubblesort.h  coredefine.h  insertionsort.h  selectionsort.h  sortbase.h
Sort/lib/: CMakeLists.txt
Sort/lib-static/: CMakeLists.txt
Sort/lib-static/build-Makefile/: CMakeCache.txt  Makefile  cmake_install.cmake
Sort/lib-static/build-Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
Sort/lib/build-Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
Sort/lib/build-Sort/: CMakeCache.txt  Makefile  cmake_install.cmake
Sort/src/: bubblesort.cpp  insertionsort.cpp  selectionsort.cpp  sortbase.cpp
(+14 files in other folders)
