cmake_minimum_required(VERSION 3.10)
project(SortProject VERSION 1.0 LANGUAGES CXX)    
set(CMAKE_CXX_STANDARD 17)    
include_directories(${CMAKE_SOURCE_DIR}/include)
link_directories(${CMAKE_SOURCE_DIR}/lib/build-Makefiles)
add_executable(sortProject main.cpp)
target_link_libraries(sortProject sort)