cmake_minimum_required(VERSION 3.10)
project(sort)
set (CMAKE_BUILD_TYPE Release)
include_directories(../include)
file(GLOB SOURCES "../src/*.cpp")
add_library(sort STATIC ${SOURCES})
set_target_properties(sort PROPERTIES PREFIX "" OUTPUT_NAME "sort") 
install(TARGETS sort DESTINATION ../lib-static)